<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Financas</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="btEntrar">Entrar</string>
    <string name="btNovoUsuario">Novo Usuário</string>
    <string name="btCadastrarNovoUsuario">Cadastrar Novo Usuário</string>
    <string name="txtEmptyNome">Nome</string>
    <string name="txtEmptySenha">Senha</string>
    <string name="txtEmptyUsuario">Usuário</string>
    <string name="txtEmptyEmail">E-mail</string>
    <string name="txtEmptyTelefone">Telefone</string>
    <string name="separador">______________________</string>
    <string name="LOGIN">LOGIN</string>
    <string name="NOVO_USUARIO">NOVO USUÁRIO</string>
    <string name="VOLTAR">VOLTAR</string>
    <string name="calendario">Calendário</string>
    <string name="backup">Backup</string>
    <string name="graficos">Gráficos</string>
    <string name="categorias">Categorias</string>
    <string name="financas">Finanças</string>
    <string name="excluir_dados">Excluir Dados</string>
    <string name="informacoes">Informações</string>
    <string name="Integrante1">RM 46882 - Newton Arruda</string>
    <string name="Integrante2">RM 46475 - Caio</string>
    <string name="Integrante3">RM ##### - Mauricio</string>
    <string name="rodape">Informações de rodapé</string>
    <string name="titulo_activity_menu">Menu Finanças</string>
    <string name="titulo_activity_calendario">Calendário</string>
    <string name="ganhos">Ganhos</string>
    <string name="gastos">Gastos</string>
    <string name="totais">Totais</string>
    <string name="title_activity_ganhos">Ganhos</string>
    <string name="title_activity_gastos">Gastos</string>
    <string name="title_activity_totais">Totais</string>
    <string name="Total">Total:</string>
    <string name="Saldo">Saldo:</string>
    <string name="xxx">xxx</string>
    <string name="TotalGanhos">Total ganhos:</string>
    <string name="TotalGastos">Total gastos:</string>
    <string name="abreParentesis">(</string>
    <string name="fechaParentesis">)</string>
    <string name="title_activity_financas">Financas</string>
    <string name="titulo_activity_categorias">Lista de Categorias</string>
    <string name="CATEGORIAS">CATEGORIAS</string>
    <string name="mais">+</string>
    <string name="mapas">Mapas</string>
    <string name="titulo_activity_mapas">Mapas</string>

</resources>