<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/dataLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:id="@+id/anterior"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true" >

            <Button
                android:id="@+id/anteriorButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/abreParentesis" />
        </RelativeLayout>

        <TextView
            android:id="@+id/dataTituloLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/hello_world"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/proximo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" >

            <Button
                android:id="@+id/proximoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fechaParentesis" />
        </RelativeLayout>
    </RelativeLayout>

    <br.com.fiap.financas.component.InfiniteViewPager
        android:id="@+id/infinite_viewpager"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

</LinearLayout>