<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:ignore="UselessParent" >
     
    <LinearLayout
        android:id="@+id/linearLayout1"
        style="@style/TitleBar" >

        <ImageView
            android:id="@+id/img1"
            style="@style/TitleBarLogo"
            android:layout_gravity="center"
            android:layout_marginBottom="4dip"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:layout_marginTop="5dip"
            android:background="@null"
            android:contentDescription="@null"
            android:onClick="onClickHome"
            android:paddingBottom="2dip"
            android:paddingLeft="5dip"
            android:paddingRight="7dip"
            android:src="@drawable/ic_launcher" />

        <ImageView
            android:id="@+id/sep"
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:layout_marginRight="7dip"
            android:background="@drawable/ic_launcher"
            android:contentDescription="@null" />

        <TextView
            android:id="@+id/tvMenu"
            style="@style/TitleBarText"
            android:paddingLeft="8dip" />
    </LinearLayout>



    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llRodape"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayout1" >

        <LinearLayout
            android:id="@+id/LinearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:background="@drawable/background_app" >

            <LinearLayout
                android:id="@+id/LinearLayout2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/ivCalendario"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@null"
                    android:onClick="onClickCalendario"
                    android:src="@drawable/calendario" />

                <ImageView
                    android:id="@+id/ivBackup"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@null"
                    android:onClick="onClickBackup"
                    android:src="@drawable/backup" />

                <ImageView
                    android:id="@+id/ivGraficos"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@null"
                    android:onClick="onClickGraficos"
                    android:src="@drawable/graficos" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tvCalendario"
                    style="@style/HomeTextSmall"
                    android:layout_width="0dp"
                    android:layout_marginTop="0dip"
                    android:layout_weight="1"
                    android:text="@string/calendario" />

                <TextView
                    android:id="@+id/tvBackup"
                    style="@style/HomeTextSmall"
                    android:layout_width="0dp"
                    android:layout_marginTop="0dip"
                    android:layout_weight="1"
                    android:text="@string/backup" />

                <TextView
                    android:id="@+id/tvGraficos"
                    style="@style/HomeTextSmall"
                    android:layout_width="0dp"
                    android:layout_marginTop="0dip"
                    android:layout_weight="1"
                    android:text="@string/graficos" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/ivCategorias"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@null"
                    android:onClick="onClickCategorias"
                    android:src="@drawable/categorias" />

                <ImageView
                    android:id="@+id/ivFinancas"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@null"
                    android:onClick="onClickFinancas"
                    android:src="@drawable/ficancas" />

                <ImageView
                    android:id="@+id/ivExcluirDados"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@null"
                    android:onClick="onClickExcluirDados"
                    android:src="@drawable/excluir_dados" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tvCategorias"
                    style="@style/HomeTextSmall"
                    android:layout_width="0dp"
                    android:layout_marginTop="0dip"
                    android:layout_weight="1"
                    android:text="@string/categorias" />

                <TextView
                    android:id="@+id/tvFinancas"
                    style="@style/HomeTextSmall"
                    android:layout_width="0dp"
                    android:layout_marginTop="0dip"
                    android:layout_weight="1"
                    android:text="@string/financas" />

                <TextView
                    android:id="@+id/tvExcluirDados"
                    style="@style/HomeTextSmall"
                    android:layout_width="0dp"
                    android:layout_marginTop="0dip"
                    android:layout_weight="1"
                    android:text="@string/excluir_dados" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/ivInformacoes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@null"
                    android:onClick="onClickInformacoes"
                    android:src="@drawable/informacoes" />

                <ImageView
                    android:id="@+id/ivMapas"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@null"
                    android:onClick="onClickMapas"
                    android:src="@drawable/mapas" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout7"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tvInformacoes"
                    style="@style/HomeTextSmall"
                    android:layout_width="0dp"
                    android:layout_marginTop="0dip"
                    android:layout_weight="1"
                    android:text="@string/informacoes" />

                <TextView
                    android:id="@+id/tvMapas"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/mapas"
                    android:textColor="@color/foreground"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llRodape"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvRodape"
            style="@style/TitleBarText"
            android:layout_width="fill_parent"
            android:background="@color/titulo_background"
            android:text="@string/rodape" />
    </LinearLayout>

</RelativeLayout>